# akarpov_file_tools

./: .env.template  .gitignore  Dockerfile  docker-compose.yml  install_preview_dependencies.sh  pyproject.toml  requirements.txt
app/: main.py
app/api/: endpoints.py
app/core/: config.py
app/services/: meta.py  preview.py
